--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,6 @@
-== Welcome to Rails
+asdfs== Welcome to Rails
+
+This is a line changed
 
 Rails is a web-application framework that includes everything needed to create
 database-backed web applications according to the Model-View-Control pattern.
